--- a/sigmaCabs/app/views/bookings/bookingHistory.html
+++ b/sigmaCabs/app/views/bookings/bookingHistory.html
@@ -18,7 +18,7 @@
     		<span class="historyBarValue">1287</span>
     	</div>
     	<div class="left historyBarItem">
-    		<span class="historyBarLabel"><a class="viewAllHistoryLink">View Full History</a></span>
+    		<span class="historyBarLabel"><a class="viewAllHistoryLink">View History</a></span>
     	</div>
     </div>
     <div style="height:163px;" id="customerBookingGridID" class = "bookingHistoryGrid">
