--- a/sigmaCabs/app/views/booking.html
+++ b/sigmaCabs/app/views/booking.html
@@ -52,7 +52,7 @@
 	            <span class = "bokingLabel" data-ng-bind="customerID"></span>
 	        </div>
 		</div>
-
+		<div class="soft-msg" data-ng-include="viewLoader"></div>
 	    <div class="dashboard-search">
 	        <div class="existing-customer-booking pull-left" data-ng-include="existingCustomerAddBooking" data-ng-show="showExistingCustomerAddBooking"></div>
 
