--- a/sigmaCabs/app/views/bookings/personalForm.html
+++ b/sigmaCabs/app/views/bookings/personalForm.html
@@ -8,27 +8,27 @@
         </div>
         <div class="fieldContainer clearBoth relative clearBoth">
             <label class="labelCompact">Caller Name </label>
-            <input type="text" ng-model="customer.customerDetails.name" class="left validate[required,maxSize[128]] textFieldCompact"  />
+            <input type="text" ng-model="customerDetails.name" class="left validate[required,maxSize[128]] textFieldCompact"  />
             <span class="smsText">SMS</span>
         </div>
         <div class="fieldContainer clearBoth relative clearBoth">
             <label class="labelCompact">Caller Ph. </label>
-            <input type="text" ng-model="customer.customerDetails.callerPhone" class="left validate[required,maxSize[128]] textFieldCompact" readonly />
-            <input name="" checked class="left smsCheckbox" type="checkbox" value="">
+            <input type="text" ng-model="customerDetails.mobile" class="left validate[required,maxSize[128]] textFieldCompact" readonly />
+            <input checked class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative ">
             <label class="labelCompact">Mobile2</label>
-            <input type="text" ng-model="customer.customerDetails.mobile" class="left validate[required,maxSize[128]] textFieldCompact"/>
-            <input name="" class="left smsCheckbox" type="checkbox" value="">
+            <input type="text" ng-model="customerDetails.mobile2" class="left validate[required,maxSize[128]] textFieldCompact"/>
+            <input class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative ">
             <label class="labelCompact">Alt. Ph.</label>
-            <input type="text" ng-model="customer.customerDetails.altMobile" class="left validate[required,maxSize[128]] textFieldCompact" />
-            <input name="" class="left smsCheckbox" type="checkbox" value="">
+            <input type="text" ng-model="customerDetails.altPhone" class="left validate[required,maxSize[128]] textFieldCompact" />
+            <input class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative" >
             <label class="labelCompact">Alt. Name.</label>
-            <input type="text" ng-model="customer.customerDetails.altName" style="position:absolute;" class="validate[required,maxSize[128]] textFieldCompact" />
+            <input type="text" ng-model="customerDetails.altName" style="position:absolute;" class="validate[required,maxSize[128]] textFieldCompact" />
         </div>
         <hr class="buttonSpliter" />
         <div class="clearBoth relative mainButtonContainer">
