--- a/sigmaCabs/app/views/bookings/cancelBookingMain.html
+++ b/sigmaCabs/app/views/bookings/cancelBookingMain.html
@@ -44,7 +44,7 @@
 
         </div>
         <div class="modal-footer">
-            <button type="button" style="margin: 0px;" class="btn-danger btnCompact" ng-click="handleSaveAndExit()">Cancel Booking</button>
+            <button type="button" style="margin: 0px;" class="btn-danger btnCompact" ng-click="fnSaveAndExit()">Cancel Booking</button>
             <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()" >Exit</button>
         </div>
     </div>
