--- a/sigmaCabs/app/views/bookings/personalForm.html
+++ b/sigmaCabs/app/views/bookings/personalForm.html
@@ -23,12 +23,12 @@
         </div>
         <div class="fieldContainer clearBoth relative ">
             <label class="labelCompact">Alt. Ph.</label>
-            <input type="text" ng-model="customerDetails.altPhone" class="left validate[required,maxSize[128]] textFieldCompact" />
+            <input type="text" ng-model="bookingDetails.primaryMobile" class="left validate[required,maxSize[128]] textFieldCompact" />
             <input class="left smsCheckbox" type="checkbox" value="">
         </div>
         <div class="fieldContainer clearBoth relative" >
             <label class="labelCompact">Alt. Name.</label>
-            <input type="text" ng-model="customerDetails.altName" style="position:absolute;" class="validate[required,maxSize[128]] textFieldCompact" />
+            <input type="text" ng-model="bookingDetails.primaryPassanger" style="position:absolute;" class="validate[required,maxSize[128]] textFieldCompact" />
         </div>
         <hr class="buttonSpliter" />
         <div class="clearBoth relative mainButtonContainer">
