Integrated APIs for bookingTypes, blockCaller, saveBooking singular. Added multiDatePicker in add Request.

--- a/sigmaCabs/app/styles/booking.scss
+++ b/sigmaCabs/app/styles/booking.scss
@@ -178,7 +178,7 @@ ul.bookingNav_ul li:last-child {
 }
 
 .modalClass.add-request .modal-dialog{
-  width: 405px !important;
+  width: 442px !important;
 }
 
 .multiVehicleCount{
@@ -254,4 +254,9 @@ tr:nth-child(odd) {
 }
 .cityPickUp th{
   width: 90px;
+}
+
+
+.cust-request .fieldContainer{
+  margin: 0px 5px 0px 5px;
 }
