--- a/sigmaCabs/app/views/bookings/blockCustomerMain.html
+++ b/sigmaCabs/app/views/bookings/blockCustomerMain.html
@@ -20,17 +20,15 @@
 
                 <div class="fieldContainer  relative">
                     <label class="labelCompact">Priority</label>
-                    <select class=" validate[maxSize[36]] selectFieldCompact" ng-model="iPriority" ng-options="k as v for (k,v) in priorities"></select>
+                    <select class=" validate[maxSize[36]] selectFieldCompact" ng-model="priorityId" ng-options="k as v for (k,v) in priorities"></select>
                 </div>
                 <div class="fieldContainer  relative">
                     <label class="labelCompact">Reason</label>
-                    <select class=" validate[maxSize[36]] selectFieldCompact" >
-                        <option>Choose</option>
-                    </select>
+                    <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="reasonId" data-ng-options="obj.id as obj.reason for obj in reason"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
                     <label class="labelCompact">Comment</label>
-                    <textarea class="cancelBookingComment"></textarea>
+                    <textarea data-ng-model="comments" class="cancelBookingComment"></textarea>
                 </div>
 
             </fieldset>
