--- a/sigmaCabs/app/views/bookings/bookingForm.html
+++ b/sigmaCabs/app/views/bookings/bookingForm.html
@@ -1,5 +1,5 @@
 <fieldset data-ng-controller="bookingFormController" class="bookingFormController left" style="margin-left: 7px;">
-    <legend class="searchbox-border">Travel Information</legend>
+    <legend class="searchbox-border">Travel Information <span>({{ bookingStatusName }})</span></legend>
 
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Pickup Date</label>
@@ -12,7 +12,7 @@
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Vehicle Name</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingDetails.vehicleType"></select>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingDetails.vehicleName"></select>
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact">Vehicle Type</label>
@@ -35,13 +35,11 @@
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.journeyType" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
+        <select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="tmpJourneyType" data-ng-change="fnPopSubJourneyTypes()" data-ng-options="obj.id as obj.journeyType for obj in journeyTypes"></select>
     </div>
     <div class="fieldContainer  relative right">
         <label class="labelCompact" style="width: 113px;">Sub-Journey Type</label>
-        <select class=" validate[maxSize[36]] selectFieldCompact" >
-            <option>Choose</option>
-        </select>
+        <select class=" validate[maxSize[36]] selectFieldCompact"  data-ng-model="bookingDetails.subJourneyType" data-ng-options="obj.id as obj.journeyType for obj in subJourneyTypes | filter:{parentId: tmpSelectedJourneyType.id}"></select>
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Landmark1</label>
@@ -55,17 +53,12 @@
         <p class="clear"/>
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
-        <div data-ng-hide="bookingDetails.bookingId" style="text-align: center;">
-            <button class="btnCompact btn-success" data-ng-click="fnSaveBooking()">Save Booking</button>
-            <button class="btnCompact btn-success" data-ng-click="fnOpenCustFeedback()">Cust. Feedback</button>
-            <button class="btnCompact btn-success" data-ng-click="fnCallDesposition()">Desposition</button>
-        </div>
-        <div data-ng-show="bookingDetails.bookingId" style="text-align: center;" class="closedBookingButtonsContainer">
-            <button class="btnCompact btn-danger" data-ng-click="fnOpenCancelBooking()" data-ng-show="bShowCancel">Cancel Booking</button>
-            <button class="btnCompact btn-success" data-ng-click="fnSaveAsNewBooking()">Save as New Booking</button>
-            <button class="btnCompact btn-success" data-ng-click="fnSaveBooking()" data-ng-show="bShowSaveAndClose">Save & Close</button>            
-            <button class="btnCompact btn-success" data-ng-click="fnOpenCustFeedback()" data-ng-show="bShowCustomerFeedbackBtn">Cust. Feedback</button>
-            <button class="btnCompact btn-success" data-ng-click="fnCallDesposition()">Desposition</button>
+        <div style="text-align: center;">            
+            <button class="btnCompact btn-danger" data-ng-show="bShowCancelBookingBtn" data-ng-click="fnOpenCancelBooking()" >Cancel Booking</button>
+            <button class="btnCompact btn-success" data-ng-show="bShowSaveBookingBtn" data-ng-click="fnSaveBooking()">Save Booking</button>
+            <button class="btnCompact btn-success" data-ng-show="bShowSaveAsNewBookingBtn" data-ng-click="fnSaveAsNewBooking()">Save as New Booking</button>
+            <button class="btnCompact btn-success" data-ng-show="bShowDispositionBtn" data-ng-click="fnCallDesposition()">Desposition</button>
+            <button class="btnCompact btn-success" data-ng-show="bShowCustFeedbackBtn" data-ng-click="fnOpenCustFeedback()">Cust. Feedback</button>
         </div>
         <p class="clear"/>
     </div>
