Dispatch files: Added chart, statistics grid related changes

--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -872,18 +872,18 @@ textFieldCompact[disabled] .textFieldCompact {
 .chatMsgContainer{
   background: #FFF;
   width: 100%;
-  height: 120px;
+  height: 70px;
   clear: both;
   border: 1px solid #B5B8C8;
   margin-bottom: 9px;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 .chatMsgText{
   margin: -7px 0px 0px 0px;
   height: 33px;
   font-size: 11px;
-  width: 195px;
+  width: 162px;
   border: 1px solid #B5B8C8;
   resize: none;
 }
