--- a/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
+++ b/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
@@ -1,4 +1,10 @@
-<div data-ng-controller="bookingStatisticsController">
+<fieldset class="" style="width:360px;margin-left: 7px;">
+    <legend class="searchbox-border">Statistics</legend>
+    <div style="height:192px;" id="customerBookingGridID" class = "bookingHistoryGrid">
+    	<div class="gridStyle" ng-grid="gridStatisticsData" style="height:100%;margin:0px;background-color:transparent;"></div>
+    </div>
+</fieldset>
+<!-- <div data-ng-controller="bookingStatisticsController">
 	<div class = "staticsContainer">
 		<legend class="searchbox-border">Statistics</legend>
 		<table class = "bookingsTable bokingLabel stastics" border="1">					
@@ -48,5 +54,4 @@
 		</table>
 		
 	</div>
-</div>
- 
+</div> -->
