--- a/sigmaCabs/app/views/dispatches/lastMonthHistory.html
+++ b/sigmaCabs/app/views/dispatches/lastMonthHistory.html
@@ -1,6 +1,6 @@
 <fieldset class="" style="clear:both;">
     <legend class="searchbox-border">Last Month History</legend>
     <div style="min-height: 200px;">
-    	<chart value='{{chartData}}' type="pie" id="stateChart" height = "225"></chart>
+    	<chart  value='{{assetStateChartData}}' type="pie" id="stateChart" height= "200" width="200"></chart>
     </div>
 </fieldset>
