--- a/sigmaCabs/app/views/dispatches/vehicalData.html
+++ b/sigmaCabs/app/views/dispatches/vehicalData.html
@@ -1,4 +1,4 @@
 <fieldset class="" style="clear:both;">
-    <legend class="searchbox-border">Vehicle History</legend>
+    <legend class="searchbox-border">Vehicle Details</legend>
     <div style="min-height: 200px;"></div>
 </fieldset>
