--- a/sigmaCabs/app/views/dispatches/vehicalInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicalInformationForm.html
@@ -34,7 +34,7 @@
         </div>
         <hr class="buttonSpliter" />
         <div class="clearBoth relative mainButtonContainer">
-            <button class="left btnCompact btn-success" data-ng-click="fnBlockCustomer();">Feedback</button>
+            <button class="left btnCompact btn-success" data-ng-click="fnFeedback();">Feedback</button>
             <button class="right btnCompact btn-success" data-ng-click="fnOpenCustomerRequest();">Add Request</button>
         </div>
         <p class="clear" />
